# 3D-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: interactive_scene_example.cpp  interactive_scene_example2.cpp  rotating_scene_example.cpp
presentation/: presentation.tex
report/: bibl.bib  commands.sty  packages.sty  report.tex  titlepage.sty
src/: application.cpp  application.h  camera.cpp  camera.h  renderer.cpp  renderer.h  renderer_types.h  screen.cpp  screen.h  triangle.cpp  triangle.h  world.cpp  world.h
